# cola-slide

./: .gitignore  Makefile  README.md  coca-cola.typ  cola-template.typ  pyproject.toml
analysis/cola_price_analysis/: README.md
analysis/cola_price_analysis/src/: plot_channel_prices.py
data/: cola-survey.csv
