[project]
name = "cola-slide"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Sung",email = "sungpinyue@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typ2pptx (>=0.2.1,<0.3.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
